; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/net/rds/extr_connection.c_rds_conn_init.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/net/rds/extr_connection.c_rds_conn_init.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [15 x i8] c"rds_connection\00", align 1
@rds_conn_slab = common dso_local global i32 0, align 4
@ENOMEM = common dso_local global i32 0, align 4
@RDS_INFO_CONNECTIONS = common dso_local global i32 0, align 4
@rds_conn_info = common dso_local global i32 0, align 4
@RDS_INFO_SEND_MESSAGES = common dso_local global i32 0, align 4
@rds_conn_message_info_send = common dso_local global i32 0, align 4
@RDS_INFO_RETRANS_MESSAGES = common dso_local global i32 0, align 4
@rds_conn_message_info_retrans = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @rds_conn_init() #0 {
  %1 = alloca i32, align 4
  %2 = call i32 @kmem_cache_create(i8* getelementptr inbounds ([15 x i8], [15 x i8]* @.str, i64 0, i64 0), i32 4, i32 0, i32 0, i32* null)
  store i32 %2, i32* @rds_conn_slab, align 4
  %3 = load i32, i32* @rds_conn_slab, align 4
  %4 = icmp ne i32 %3, 0
  br i1 %4, label %8, label %5

5:                                                ; preds = %0
  %6 = load i32, i32* @ENOMEM, align 4
  %7 = sub nsw i32 0, %6
  store i32 %7, i32* %1, align 4
  br label %18

8:                                                ; preds = %0
  %9 = load i32, i32* @RDS_INFO_CONNECTIONS, align 4
  %10 = load i32, i32* @rds_conn_info, align 4
  %11 = call i32 @rds_info_register_func(i32 %9, i32 %10)
  %12 = load i32, i32* @RDS_INFO_SEND_MESSAGES, align 4
  %13 = load i32, i32* @rds_conn_message_info_send, align 4
  %14 = call i32 @rds_info_register_func(i32 %12, i32 %13)
  %15 = load i32, i32* @RDS_INFO_RETRANS_MESSAGES, align 4
  %16 = load i32, i32* @rds_conn_message_info_retrans, align 4
  %17 = call i32 @rds_info_register_func(i32 %15, i32 %16)
  store i32 0, i32* %1, align 4
  br label %18

18:                                               ; preds = %8, %5
  %19 = load i32, i32* %1, align 4
  ret i32 %19
}

declare dso_local i32 @kmem_cache_create(i8*, i32, i32, i32, i32*) #1

declare dso_local i32 @rds_info_register_func(i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
